# example_stm32f407

./: CMakeLists.txt
include/: audio.h  cs43l22.h
src/: audio.c  cs43l22.c  led_blue.c  led_orange.c  led_red.c  main_system.c  uart.c
stm32cube/: .cproject  .mxproject  .project  exemplo1.ioc
stm32cube/Core/Inc/: stm32f4xx_hal_conf.h
toolchain/: stm32f407.cmake
